# eotorch

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: full_test.yml
docs/: getting_started.md  index.md  reference.md
eotorch/: __about__.py  __init__.py  bandindex.py  normalize.py  plot.py  rasterize.py  utils.py
eotorch/classification/models/: deepresunet.py
eotorch/data/: __init__.py  dataloader.py  datamodules.py  geodatasets.py  splits.py  splits.readme.md  tasks.py
eotorch/datasets/: __init__.py  geo.py
eotorch/inference/: __init__.py  inference.py  inference_utils.py
eotorch/layers/: conv.py
eotorch/models/: __init__.py  blocks.py  deepresunet.py  dinov3_upernet.py  layers.py  loss.py  xception.py
eotorch/plot/: __init__.py  plot.py
eotorch/processing/: __init__.py  normalize.py  patch.py  rasterize.py
notebooks/: regression.ipynb  segmentation.ipynb
reference/: index.html
tests/: test_datamodule.py  test_dinov3_upernet.py  test_dinov3_upernet_integration.py  test_file_wise_split.py  test_pixel_counts.py  test_plot.py  test_regression_task.py  test_segmentation_task.py  test_splits.py  test_utils.py
tests/data/: image_0.tif  image_1.tif  image_2.tif  image_3.tif  label_0.tif  label_1.tif  label_2.tif  label_3.tif  sparse_raster.tif  test_img.tif
