[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/eotorch")
# note: the package name 'eotorch' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["eotorch"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[project]
# name on PyPI (e.g. pip install eotorch)
name = "eotorch"
version = "0.0.1"
dependencies = [
    "alive-progress>=3.2.0",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "numpy==2.2.3",
    "torchgeo>=0.7.0",
]

authors = [
  { name="First Last", email="initials@dhigroup.com" },
]
description = "Useful library"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]

[project.urls]
"Homepage" = "https://github.com/DHI/eotorch"
"Bug Tracker" = "https://github.com/DHI/eotorch/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
