[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# location of package relative to the repository root (e.g. alternatively "src/eotorch")
# note: the package name 'eotorch' can be different from the project name on PyPI
#       the project name (PyPI) is used for pip install, whereas the package name is used for imports
packages = ["eotorch"]  

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests", "images"]

[tool.hatch.version]
path = "eotorch/__about__.py"

[project]
# name on PyPI (e.g. pip install eotorch)
name = "eotorch"
dynamic = ["version"]
dependencies = [
    "alive-progress>=3.2.0",
    "folium>=0.19.5",
    "geopandas>=1.0.1",
    "numpy>=1.26",
    "torchgeo>=0.9.0",
]

authors = [
  { name="Paul Daniel", email="pada@dhigroup.com" },
  { name="Nicklas Simonsen", email="nisi@dhigroup.com" },
  { name="Marie Lund Larsen", email="mlla@dhigroup.com" },
]
description = "Geospatial deep learning built on top of TorchGeo and PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "ruff",
  "mypy",
  "mkdocs",
  "mkdocstrings[python]", 
  "mkdocs-material"
]

test= [
  "pytest",
  "pytest-cov",
  "mypy",
]

notebooks = [
  "jupyter",
]
cuda126 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", extra = "cuda126" },
]
torchvision = [
  { index = "pytorch-cu126", extra = "cuda126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.urls]
"Homepage" = "https://github.com/DHI/eotorch"
"Bug Tracker" = "https://github.com/DHI/eotorch/issues"


[tool.ruff]
# ignore long lines
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unreachable = false
no_implicit_optional = true
